--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <!-- stats.js
 <script src="js/lib/stats.js"></script>-->
 
+<div id="barre">zazlet</div>
+
 
 
 <div id ="main"><a href="https://x.com/LIXOUA" >Twitter</a></div>
