--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <head>
 <meta charset="UTF-8">
 <title> Site </title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css"> <!-- Link to your CSS file -->
 </head>
 <body>
@@ -13,13 +15,34 @@
 <!-- stats.js
 <script src="js/lib/stats.js"></script>-->
 
-<div id="barre">zazlet</div>
+<div id="barre">zazlet </div>
+<div id="flch">‣</div>
+<div id="urlsite">nazlet.ct.ws</div>
+<b><div id="main">Nazlet</div></b>
+
+
+<div id="sub">
+<a href="https://x.com/LIXOUA">Twitter</a>
+
+    <div class="container">
+        <a href="https://discord.gg/GEyuPJq5wH">Discord</a>
+        <div class="speech-bubble">‎ ‎ ‎nztl</div>
+    </div>
+    <a href="https://steamcommunity.com/id/Nazlet_/">Steam</a>
+    <a href="https://osu.ppy.sh/users/20879846">osu!</a>
+    <a href="https://www.youtube.com/@LIXOUALeBg">Youtube</a>
+</div>
+
+<div id="ytosu">
+<a href="https://www.youtube.com/@nazletosu">clips</a>
+</div>
 
 
 
-<div id ="main"><a href="https://x.com/LIXOUA" >Twitter</a></div>
 
-<!--
+
+
+
 <script>
     document.addEventListener("mousemove", function(e) {
         const target = document.getElementById("particles-js");
@@ -31,7 +54,7 @@
         target.style.backgroundPosition = `calc(50% + ${x}px) calc(50% + ${y}px)`;
     });
 </script>
--->
+
 
 
 
