--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <div id="barre">zazlet </div>
 <div id="flch">‣</div>
-<div id="urlsite">nazlet.ct.ws</div>
+<div id="urlsite">nazlet.xyz</div>
 <b><div id="main">Nazlet</div></b>
 
 
