--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title> Nazlet.xyz </title>
+<title> Nazlet </title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;700&display=swap" rel="stylesheet">
+	<link rel="icon" type="image/x-icon" href="icon.ico">
 <link rel="stylesheet" href="style.css"> <!-- Link to your CSS file -->
 </head>
 <body>
@@ -33,11 +34,10 @@
     <a href="https://www.youtube.com/@LIXOUALeBg">Youtube</a>
 </div>
 
-<div id="ytosu">
-<a href="https://www.youtube.com/@nazletosu">clips</a>
-</div>
+<div id="ytosu"><a href="https://www.youtube.com/@nazletosu">clips</a></div>
 
 
+<div id="source"><a href="https://www.pixiv.net/en/artworks/125667136">Source</a></div>
 
 
 
