Ajout bouton principal, et bouton github

--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 <script src="app.js"></script>
 <!-- particles.js container -->
 
-<!-- stats.js
-<script src="js/lib/stats.js"></script>-->
+<div id="emoji"><a href="images/emojipleure.png"></a>
+    <img src="images/emojipleure.png" alt="crying_emoji" height="20" width="20">
+</div>
 
 <div id="barre">zazlet </div>
 <div id="flch">‣</div>
-<div id="urlsite">nazlet.xyz</div>
+<div id="urlsite"><a href="https://nazlet.xyz">nazlet.xyz</a></div>
 <b><div id="main">Nazlet</div></b>
 
 
@@ -30,17 +31,23 @@
         <div class="speech-bubble">‎ ‎ ‎ nztl</div>
     </div>
     <a href="https://steamcommunity.com/id/Nazlet_/">Steam</a>
-    <a href="https://osu.ppy.sh/users/20879846">osu!</a>
+    <a href="https://github.com/Nazlet11">Github</a>
     <a href="https://www.youtube.com/@LIXOUALeBg">Youtube</a>
 </div>
+
+
+
+<hr class="separator">
+
 
 <div id="ytosu"><a href="https://www.youtube.com/@nazletosu">clips</a></div>
 
 
 <div id="source"><a href="https://www.pixiv.net/en/artworks/125667136">Source</a></div>
 
-
-
+<!-- particles.js container
+<button class="button"><a href="">Texte</a></button>
+-->
 
 
 <script>
