--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title> Nazlet </title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;700&display=swap" rel="stylesheet">
-	<link rel="icon" type="image/x-icon" href="icon.ico">
+	<link rel="icon" type="image/x-icon" href="images/icon.ico">
 <link rel="stylesheet" href="style.css"> <!-- Link to your CSS file -->
 </head>
 <body>
@@ -45,9 +45,9 @@
 
 <div id="source"><a href="https://www.pixiv.net/en/artworks/125667136">Source</a></div>
 
-<!-- particles.js container
-<button class="button"><a href="">Texte</a></button>
--->
+
+<a href="txt_chnger/text_changer.php" class="button">Txt ⥃</a>
+
 
 
 <script>
