touches de fin du back end de bible checker

--- a/bible/bible.html
+++ b/bible/bible.html
@@ -10,17 +10,20 @@
   </head>
   <body>
     <main>
-        <h1>Are these word in the bible ?</h1> 
+          <h1>Are these word in the bible ?</h1>   
 
 
 
-    <p id="txtaaaaa">   <i>Texte a comparer</i></p>  
+     <!-- <p id="txtaaaaa">   <i>Texte a comparer</i></p>  -->
  
-    <br>      <h2>                  Entrée : </h2>
+    <br>      <h2>                  Enter text : </h2>
     <textarea name="txt" rows="5" cols="40" class="txtarea"></textarea>
-    <button onclick="bouton()">Comparer</button>
-        <p id="wordsFoundtxt">No words</p>  
-    <i><p id="debugtextshow">debug</p></i>
+    <button onclick="bouton()">Compare</button>
+        <p id="wordsFoundtxt">No words</p> 
+        <br>
+        <br>
+      <!--  <i><p id="debugtextshow">debug</p></i>
+  -->
 
 
 
