fix bible check

--- a/bible/bible.html
+++ b/bible/bible.html
@@ -22,8 +22,8 @@
         <p id="wordsFoundtxt">No words</p> 
         <br>
         <br>
-      <!--  <i><p id="debugtextshow">debug</p></i>
-  -->
+        <i><p id="debugtextshow">debug</p></i>
+  
 
 
 
